# superset-api-client

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publishing.yaml  python-package.yaml
examples/: change_colors.py  export_dashboard.py  export_dataset.py  quickstart.py
scripts/: build.sh  entrypoint.sh  release.sh
supersetapiclient/: __init__.py  assets.py  base.py  charts.py  client.py  dashboards.py  databases.py  datasets.py  exceptions.py  query_string.py  roles.py  saved_queries.py  typing.py  utils.py
supersetapiclient/base/: base.py  currency_format.py  datasource.py  enum_str.py  parse.py  types.py
supersetapiclient/charts/: charts.py  filters.py  options.py  pie.py  queries.py  query_context.py  table.py  types.py
supersetapiclient/dashboards/: __init__.py  dasboard-template.py  dashboards.py  generate_graphviz.py  itemposition.py  metadata.py  metadataposition.py  nodeposisition.py  treenodeposisition.py
tests/: conftest.py  simple_test.py  superset_config.py  superset_test_config.py
tests/integration/: test_basic.py
tests/mocks/endpoints/chart/: _info.get
tests/mocks/endpoints/security/: csrf_token.get  login.post
tests/security/: test_init.py
