[metadata]
name = superset-api-client
version = 0.5.0
author = Emmanuel B.
author_email = emmanuel.bavoux@gmail.com
url = https://github.com/opus-42/superset-api-client
description = A simple REST API Client for Apache-Superset
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha

[options]
packages = supersetapiclient
install_requires =
    requests >= 2.0.0
    requests-oauthlib
    pyyaml >= 6.0
    cached_property;python_version<"3.8"
python_requires = >=3.6

[options.extras_require]
dev = flake8; pytest; requests-mock; pytest-docker
build = build
