[metadata]
name = superset-api-client
version = 0.6.0
author = Emmanuel B.
author_email = emmanuel.bavoux@gmail.com
url = https://github.com/opus-42/superset-api-client
description = A simple REST API Client for Apache-Superset
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha

[options]
packages = supersetapiclient
install_requires =
    requests >= 2.0.0
    requests-oauthlib
    pyyaml >= 6.0
    cached_property;python_version<"3.8"
python_requires = >=3.6

[options.extras_require]
dev =
    flake8
    black
    isort
    pytest
    requests-mock
    pytest-docker
    pytest-cov
    coveralls
    pre-commit
build = build

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 127
max-complexity = 18
select = B,C,E,F,W,T4
exclude = .git,.venv,.tox

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=127
profile=black
